kompose/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/dvwa: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: dvwa
            - name: MYSQL_PASSWORD
              value: p@ssw0rd
            - name: MYSQL_ROOT_PASSWORD
              value: dvwa
            - name: MYSQL_USER
              value: dvwa
          image: docker.io/library/mariadb:10
          name: db
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: dvwa
      restartPolicy: Always
      volumes:
        - name: dvwa
          persistentVolumeClaim:
            claimName: dvwa
status: {}
