kompose/dvwa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: dvwa
  name: dvwa
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dvwa
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/dvwa: "true"
        io.kompose.service: dvwa
    spec:
      containers:
        - env:
            - name: DB_SERVER
              value: db
          image: ghcr.io/digininja/dvwa:latest
          name: dvwa
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
